<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.budgetapp.BudgetReport">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:id="@+id/textView5"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/textSize"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:id="@+id/monthTxt"
            android:textSize="@dimen/textSize"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newCategory"
                android:id="@+id/textView6"
                android:textSize="@dimen/reportColHeaderTextSize"
                android:layout_weight="1"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgeted"
                android:id="@+id/textView7"
                android:textSize="@dimen/reportColHeaderTextSize"
                android:layout_weight="1"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:id="@+id/textView8"
                android:textSize="@dimen/reportColHeaderTextSize"
                android:layout_weight="1"
                android:textColor="@android:color/holo_green_dark" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="337dp"
                android:id="@+id/reportListView"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gotoHome"
            android:id="@+id/reportGoHomeBtn" />

    </LinearLayout>
</RelativeLayout>
