<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.budgetapp.NewAccount">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newAccountTxt"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/newAccountHint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitBtn"
                android:id="@+id/newAccountSubmitBtn"
                android:layout_below="@+id/newAccountTxt"
                android:layout_centerHorizontal="true"
                android:layout_weight=".5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearBtn"
                android:id="@+id/newAccountClearBtn"
                android:layout_weight=".5" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backAccount"
            android:id="@+id/backNewAccountBtn" />
    </LinearLayout>

</RelativeLayout>
