<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.budgetapp.BudgetCategory">

    TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoryList"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:contextClickable="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgetAmount"
                android:id="@+id/amountLabel"
                android:inputType="none"
                android:paddingRight="0dp"
                android:textSize="@dimen/textSize"
                android:paddingLeft="5dp"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollarSign"
                android:id="@+id/textView2"
                android:textSize="@dimen/textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textLabelHeight"
                android:text="@string/initAmount"
                android:id="@+id/cateAmount"
                android:inputType="none"
                android:textSize="@dimen/textSize"
                android:layout_weight="50" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:id="@+id/textView4"
            android:textSize="@dimen/textSize"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:textColor="@android:color/holo_green_dark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textSize="@dimen/reportColHeaderTextSize"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textSize="@dimen/reportColHeaderTextSize"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account"
                android:id="@+id/textView12"
                android:layout_weight="1"
                android:textSize="@dimen/reportColHeaderTextSize"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:weightSum="1">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:id="@+id/cateExpensesList"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight=".25">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editAmountCate"
                android:id="@+id/editCategoryBtn"
                android:layout_weight="50" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addCate"
                android:id="@+id/newCateBtn"
                android:layout_weight="50" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gotoHome"
            android:id="@+id/homeBtn" />

    </LinearLayout>

</RelativeLayout>
